--- a/src/less/main_wj.less
+++ b/src/less/main_wj.less
@@ -1,5 +1,5 @@
 @charset "UTF-8";
-
+/* stylelint-disable no-descending-specificity */
 .clearfix::before,
 .clearfix::after {
   content: "";
@@ -395,430 +395,6 @@ button {
   }
 }
 
-.body-wordfail {
-  .wrap {
-    background: #fafafb;
-  }
-
-  .main {
-    width: 1200px;
-    margin: 0 auto;
-  }
-
-  .page-title {
-    text-indent: 30px;
-    height: 54px;
-    line-height: 54px;
-  }
-
-  .grey-link {
-    color: #999;
-  }
-
-  .normal-link {
-    color: #333;
-  }
-
-  .result-wp {
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.05);
-    padding-top: 56px;
-    padding-bottom: 30px;
-    margin-bottom: 15px;
-    background: rgba(255, 255, 255, 1);
-  }
-
-  .result-wp {
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.05);
-  }
-
-  .failcry {
-    width: 258px;
-    margin-left: 400px;
-    margin-right: 10px;
-    float: left;
-  }
-
-  .failright-wp {
-    float: left;
-    margin-bottom: 40px;
-  }
-
-  .fail-title {
-    font-size: 20px;
-    color: #333;
-  }
-
-  .fail-txt {
-    font-size: 14px;
-    color: #999;
-    margin-bottom: 10px;
-  }
-
-  .getscore {
-    font-size: 14px;
-    color: #333;
-
-    .score {
-      font-size: 30px;
-      color: #ff4548;
-      margin-left: 6px;
-      margin-bottom: 10px;
-    }
-  }
-
-  .fail-txt2 {
-    color: #999;
-    font-size: 14px;
-  }
-
-  .txt1 {
-    margin-right: 5px;
-  }
-
-  .fail-cue {
-    font-size: 14px;
-    color: #666;
-    text-align: center;
-    margin-bottom: 16px;
-  }
-
-  .gotostudy {
-    display: block;
-    width: 188px;
-    height: 36px;
-    background: #0085e6;
-    border-radius: 23px;
-    text-align: center;
-    line-height: 36px;
-    font-size: 16px;
-    color: #fff;
-    margin: 0 auto;
-  }
-
-  .part-title {
-    height: 50px;
-    line-height: 50px;
-    background: #0085e6;
-    color: #fff;
-    text-indent: 30px;
-
-    .titl1 {
-      margin-right: 27px;
-    }
-
-    .title2 {
-      height: 30px;
-      line-height: 30px;
-      border-left: 1px solid #fff;
-      padding-left: 30px;
-    }
-  }
-
-  .part1-wp {
-    border-radius: 8px;
-    overflow: hidden;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.05);
-    padding-bottom: 30px;
-    margin-bottom: 15px;
-  }
-
-  .part2-wp {
-    border-radius: 8px;
-    overflow: hidden;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.05);
-    padding-bottom: 30px;
-  }
-
-  .success-result {
-    color: #33cbb4;
-    font-size: 16px;
-    text-indent: 30px;
-    padding: 18px 0 20px;
-  }
-
-  .fail-result {
-    font-size: 16px;
-    text-indent: 30px;
-    padding: 18px 0 20px;
-    color: #ff4548;
-  }
-
-  .part-ul {
-    margin-left: 30px;
-
-    li {
-      float: left;
-      width: 370px;
-      height: 140px;
-      border-radius: 4px;
-      border: 1px solid #ebebeb;
-      margin-right: 15px;
-
-      &:last-of-type {
-        margin-right: 0;
-      }
-    }
-
-    .horn {
-      margin: 0 5px 0 10px;
-
-      img {
-        width: 28px;
-      }
-    }
-
-    .txt {
-      margin-left: 10px;
-    }
-
-    .title {
-      font-size: 14px;
-      color: #999;
-      padding-left: 30px;
-      float: left;
-    }
-
-    .right-img {
-      float: right;
-      margin-right: 30px;
-      width: 25px;
-      position: relative;
-      top: 6px;
-    }
-
-    .title-wp {
-      height: 40px;
-      line-height: 40px;
-      margin-bottom: 28px;
-    }
-
-    .part-ipt {
-      width: 260px;
-      height: 36px;
-      border-radius: 18px;
-      border: 1px solid #d7d7d7;
-      margin-left: 30px;
-      text-indent: 15px;
-      font-size: 14px;
-      color: #333;
-
-      &:focus {
-        outline: none;
-      }
-    }
-  }
-
-  .suceessbtm-wp {
-    width: 1138px;
-    margin: 30px auto 0;
-    border-top: 1px solid #ebebeb;
-    padding-top: 28px;
-  }
-
-  .learnmoney-img {
-    width: 103px;
-    margin-bottom: 4px;
-  }
-
-  .learnmoney-txt {
-    color: #eeb843;
-    font-size: 14px;
-    text-align: center;
-  }
-
-  .success-left {
-    width: 103px;
-    float: left;
-    margin-left: 370px;
-    margin-right: 26px;
-  }
-
-  .success-right {
-    float: left;
-
-    .txt1 {
-      font-size: 16px;
-      color: #666;
-      margin-bottom: 14px;
-    }
-
-    .txt2 {
-      font-size: 16px;
-      color: #0085e6;
-      margin-bottom: 8px;
-    }
-
-    .txt3 {
-      font-size: 14px;
-      color: #666;
-    }
-  }
-}
-
-.body-oralpractice {
-  .word-left {
-    float: left;
-    width: 434px;
-    padding-bottom: 40px;
-
-    .word {
-      font-size: 62px;
-      color: #333;
-    }
-
-    .word-cue {
-      font-size: 30px;
-      color: #666;
-      margin-bottom: 26px;
-    }
-
-    .word-txt {
-      font-size: 14px;
-      color: #666;
-      margin-bottom: 10px;
-
-      &:last-of-type {
-        margin-bottom: 0;
-      }
-    }
-
-    .word-list {
-      color: #0085e6;
-      margin-right: 17px;
-    }
-  }
-
-  .opearte-right {
-    float: left;
-
-    .img-wp {
-      height: 120px;
-    }
-
-    .soundrecord-img {
-      width: 286px;
-    }
-
-    .soundrecord-txt {
-      font-size: 14px;
-      color: #0085e6;
-      text-align: center;
-    }
-
-    .soundanalyse-img {
-      float: left;
-      width: 52px;
-      height: 63px;
-      border: 1px solid red;
-      margin-right: 5px;
-    }
-
-    .soundanalyse-txt {
-      font-size: 14px;
-      color: #0085e6;
-      height: 63px;
-      line-height: 63px;
-    }
-
-    .soundresult-img {
-      width: 56px;
-      margin-right: 24px;
-      float: left;
-    }
-
-    .spundresult-txtwp {
-      float: left;
-      color: #ff4548;
-      font-size: 16px;
-
-      .score {
-        font-size: 30px;
-      }
-
-      .soundresult-txt {
-        font-size: 14px;
-        color: #666;
-      }
-    }
-
-    .sound-result,
-    .sound-analyse {
-      margin-left: 30px;
-    }
-  }
-
-  .btn-ul {
-    margin-left: 16px;
-
-    li {
-      float: left;
-      width: 80px;
-      text-align: center;
-
-      &:nth-of-type(1) {
-        a {
-          background: url('../img/playsound.png') no-repeat;
-          background-size: cover;
-        }
-      }
-
-      &:nth-of-type(2) {
-        a {
-          background: url('../img/speak.png') no-repeat;
-          background-size: cover;
-        }
-      }
-
-      &:nth-of-type(3) {
-        a {
-          background: url('../img/play.png') no-repeat;
-          background-size: cover;
-        }
-      }
-
-      &.active {
-        .btn-txt {
-          color: #0085e6;
-        }
-
-        &:nth-of-type(1) {
-          a {
-            background: url('../img/playsound_active.png') no-repeat;
-            background-size: cover;
-          }
-        }
-
-        &:nth-of-type(2) {
-          a {
-            background: url('../img/speak_active.png') no-repeat;
-            background-size: cover;
-          }
-        }
-
-        &:nth-of-type(3) {
-          a {
-            background: url('../img/play_active.png') no-repeat;
-            background-size: cover;
-          }
-        }
-      }
-
-      .btn-txt {
-        font-size: 14px;
-        color: #666;
-        text-align: center;
-      }
-
-      a {
-        display: inline-block;
-        width: 50px;
-        height: 50px;
-        margin-bottom: 8px;
-      }
-    }
-  }
-}
-
 .body-oralpractice,
 .body-preview {
   .wrap {
@@ -1108,7 +684,7 @@ button {
         background-size: cover;
         margin: 0 35px 0 10px;
       }
-  
+
       .no-btn {
         background: url('../img/fault_icon.png') no-repeat;
         background-size: cover;
@@ -1117,6 +693,428 @@ button {
   }
 }
 
+.body-oralpractice {
+  .word-left {
+    float: left;
+    width: 434px;
+    padding-bottom: 40px;
+
+    .word {
+      font-size: 62px;
+      color: #333;
+    }
+
+    .word-cue {
+      font-size: 30px;
+      color: #666;
+      margin-bottom: 26px;
+    }
+
+    .word-txt {
+      font-size: 14px;
+      color: #666;
+      margin-bottom: 10px;
+
+      &:last-of-type {
+        margin-bottom: 0;
+      }
+    }
+
+    .word-list {
+      color: #0085e6;
+      margin-right: 17px;
+    }
+  }
+
+  .opearte-right {
+    float: left;
+
+    .img-wp {
+      height: 120px;
+    }
+
+    .soundrecord-img {
+      width: 286px;
+    }
+
+    .soundrecord-txt {
+      font-size: 14px;
+      color: #0085e6;
+      text-align: center;
+    }
+
+    .soundanalyse-img {
+      float: left;
+      width: 52px;
+      height: 63px;
+      border: 1px solid red;
+      margin-right: 5px;
+    }
+
+    .soundanalyse-txt {
+      font-size: 14px;
+      color: #0085e6;
+      height: 63px;
+      line-height: 63px;
+    }
+
+    .soundresult-img {
+      width: 56px;
+      margin-right: 24px;
+      float: left;
+    }
+
+    .spundresult-txtwp {
+      float: left;
+      color: #ff4548;
+      font-size: 16px;
+
+      .score {
+        font-size: 30px;
+      }
+
+      .soundresult-txt {
+        font-size: 14px;
+        color: #666;
+      }
+    }
+
+    .sound-result,
+    .sound-analyse {
+      margin-left: 30px;
+    }
+  }
+
+  .btn-ul {
+    margin-left: 16px;
+
+    li {
+      float: left;
+      width: 80px;
+      text-align: center;
+
+      a {
+        display: inline-block;
+        width: 50px;
+        height: 50px;
+        margin-bottom: 8px;
+      }
+
+      &:nth-of-type(1) {
+        a {
+          background: url('../img/playsound.png') no-repeat;
+          background-size: cover;
+        }
+      }
+
+      &:nth-of-type(2) {
+        a {
+          background: url('../img/speak.png') no-repeat;
+          background-size: cover;
+        }
+      }
+
+      &:nth-of-type(3) {
+        a {
+          background: url('../img/play.png') no-repeat;
+          background-size: cover;
+        }
+      }
+
+      &.active {
+        .btn-txt {
+          color: #0085e6;
+        }
+
+        &:nth-of-type(1) {
+          a {
+            background: url('../img/playsound_active.png') no-repeat;
+            background-size: cover;
+          }
+        }
+
+        &:nth-of-type(2) {
+          a {
+            background: url('../img/speak_active.png') no-repeat;
+            background-size: cover;
+          }
+        }
+
+        &:nth-of-type(3) {
+          a {
+            background: url('../img/play_active.png') no-repeat;
+            background-size: cover;
+          }
+        }
+      }
+
+      .btn-txt {
+        font-size: 14px;
+        color: #666;
+        text-align: center;
+      }
+    }
+  }
+}
+
+.body-wordfail {
+  .wrap {
+    background: #fafafb;
+  }
+
+  .main {
+    width: 1200px;
+    margin: 0 auto;
+  }
+
+  .page-title {
+    text-indent: 30px;
+    height: 54px;
+    line-height: 54px;
+  }
+
+  .grey-link {
+    color: #999;
+  }
+
+  .normal-link {
+    color: #333;
+  }
+
+  .result-wp {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.05);
+    padding-top: 56px;
+    padding-bottom: 30px;
+    margin-bottom: 15px;
+    background: rgba(255, 255, 255, 1);
+  }
+
+  .failcry {
+    width: 258px;
+    margin-left: 400px;
+    margin-right: 10px;
+    float: left;
+  }
+
+  .failright-wp {
+    float: left;
+    margin-bottom: 40px;
+  }
+
+  .fail-title {
+    font-size: 20px;
+    color: #333;
+  }
+
+  .fail-txt {
+    font-size: 14px;
+    color: #999;
+    margin-bottom: 10px;
+  }
+
+  .getscore {
+    font-size: 14px;
+    color: #333;
+
+    .score {
+      font-size: 30px;
+      color: #ff4548;
+      margin-left: 6px;
+      margin-bottom: 10px;
+    }
+  }
+
+  .fail-txt2 {
+    color: #999;
+    font-size: 14px;
+  }
+
+  .txt1 {
+    margin-right: 5px;
+  }
+
+  .fail-cue {
+    font-size: 14px;
+    color: #666;
+    text-align: center;
+    margin-bottom: 16px;
+  }
+
+  .gotostudy {
+    display: block;
+    width: 188px;
+    height: 36px;
+    background: #0085e6;
+    border-radius: 23px;
+    text-align: center;
+    line-height: 36px;
+    font-size: 16px;
+    color: #fff;
+    margin: 0 auto;
+  }
+
+  .part-title {
+    height: 50px;
+    line-height: 50px;
+    background: #0085e6;
+    color: #fff;
+    text-indent: 30px;
+
+    .titl1 {
+      margin-right: 27px;
+    }
+
+    .title2 {
+      height: 30px;
+      line-height: 30px;
+      border-left: 1px solid #fff;
+      padding-left: 30px;
+    }
+  }
+
+  .part1-wp {
+    border-radius: 8px;
+    overflow: hidden;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.05);
+    padding-bottom: 30px;
+    margin-bottom: 15px;
+  }
+
+  .part2-wp {
+    border-radius: 8px;
+    overflow: hidden;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.05);
+    padding-bottom: 30px;
+  }
+
+  .success-result {
+    color: #33cbb4;
+    font-size: 16px;
+    text-indent: 30px;
+    padding: 18px 0 20px;
+  }
+
+  .fail-result {
+    font-size: 16px;
+    text-indent: 30px;
+    padding: 18px 0 20px;
+    color: #ff4548;
+  }
+
+  .part-ul {
+    margin-left: 30px;
+
+    li {
+      float: left;
+      width: 370px;
+      height: 140px;
+      border-radius: 4px;
+      border: 1px solid #ebebeb;
+      margin-right: 15px;
+
+      &:last-of-type {
+        margin-right: 0;
+      }
+    }
+
+    .horn {
+      margin: 0 5px 0 10px;
+
+      img {
+        width: 28px;
+      }
+    }
+
+    .txt {
+      margin-left: 10px;
+    }
+
+    .title {
+      font-size: 14px;
+      color: #999;
+      padding-left: 30px;
+      float: left;
+    }
+
+    .right-img {
+      float: right;
+      margin-right: 30px;
+      width: 25px;
+      position: relative;
+      top: 6px;
+    }
+
+    .title-wp {
+      height: 40px;
+      line-height: 40px;
+      margin-bottom: 28px;
+    }
+
+    .part-ipt {
+      width: 260px;
+      height: 36px;
+      border-radius: 18px;
+      border: 1px solid #d7d7d7;
+      margin-left: 30px;
+      text-indent: 15px;
+      font-size: 14px;
+      color: #333;
+
+      &:focus {
+        outline: none;
+      }
+    }
+  }
+
+  .suceessbtm-wp {
+    width: 1138px;
+    margin: 30px auto 0;
+    border-top: 1px solid #ebebeb;
+    padding-top: 28px;
+  }
+
+  .learnmoney-img {
+    width: 103px;
+    margin-bottom: 4px;
+  }
+
+  .learnmoney-txt {
+    color: #eeb843;
+    font-size: 14px;
+    text-align: center;
+  }
+
+  .success-left {
+    width: 103px;
+    float: left;
+    margin-left: 370px;
+    margin-right: 26px;
+  }
+
+  .success-right {
+    float: left;
+
+    .txt1 {
+      font-size: 16px;
+      color: #666;
+      margin-bottom: 14px;
+    }
+
+    .txt2 {
+      font-size: 16px;
+      color: #0085e6;
+      margin-bottom: 8px;
+    }
+
+    .txt3 {
+      font-size: 14px;
+      color: #666;
+    }
+  }
+}
+
 .content-minheight {
   min-height: 270px;
 }
+
+/* stylelint-enable */
