--- a/src/less/main_wj.less
+++ b/src/less/main_wj.less
@@ -729,62 +729,62 @@ button {
   }
 
   .opearte-right {
-    float: left;
+    float: right;
 
     .img-wp {
       height: 120px;
     }
+  }
 
-    .soundrecord-img {
-      width: 286px;
+  .soundrecord-img {
+    width: 286px;
+  }
+
+  .soundrecord-txt {
+    font-size: 14px;
+    color: #0085e6;
+    text-align: center;
+  }
+
+  .soundanalyse-img {
+    float: left;
+    width: 52px;
+    height: 63px;
+    border: 1px solid red;
+    margin-right: 5px;
+  }
+
+  .soundanalyse-txt {
+    font-size: 14px;
+    color: #0085e6;
+    height: 63px;
+    line-height: 63px;
+  }
+
+  .soundresult-img {
+    width: 56px;
+    margin-right: 24px;
+    float: left;
+  }
+
+  .spundresult-txtwp {
+    float: left;
+    color: #ff4548;
+    font-size: 16px;
+
+    .score {
+      font-size: 30px;
     }
 
-    .soundrecord-txt {
+    .soundresult-txt {
       font-size: 14px;
-      color: #0085e6;
-      text-align: center;
+      color: #666;
     }
+  }
 
-    .soundanalyse-img {
-      float: left;
-      width: 52px;
-      height: 63px;
-      border: 1px solid red;
-      margin-right: 5px;
-    }
-
-    .soundanalyse-txt {
-      font-size: 14px;
-      color: #0085e6;
-      height: 63px;
-      line-height: 63px;
-    }
-
-    .soundresult-img {
-      width: 56px;
-      margin-right: 24px;
-      float: left;
-    }
-
-    .spundresult-txtwp {
-      float: left;
-      color: #ff4548;
-      font-size: 16px;
-
-      .score {
-        font-size: 30px;
-      }
-
-      .soundresult-txt {
-        font-size: 14px;
-        color: #666;
-      }
-    }
-
-    .sound-result,
-    .sound-analyse {
-      margin-left: 30px;
-    }
+  .sound-result,
+  .sound-analyse {
+    margin-left: 30px;
   }
 
   .btn-ul {
@@ -1209,7 +1209,7 @@ button {
       vertical-align: middle;
       margin-right: 3px;
     }
-  
+
     .reset-btn {
       display: inline-block;
       width: 95px;
@@ -1273,6 +1273,41 @@ button {
 
   .success-txt {
     color: #33cbb4;
+  }
+}
+
+.oraltraining-ct {
+  min-height: 267px;
+
+  .oraltraining-left {
+    float: left;
+
+    .oral-txt-en {
+      font-size: 30px;
+      color: #333;
+      margin-bottom: 14px;
+      padding-top: 18px;
+    }
+
+    .oral-txt-cn {
+      font-size: 20px;
+      color: #666;
+      margin-bottom: 24px;
+    }
+  }
+
+  .soundrecord-txt {
+    font-size: 14px;
+    color: #0085e6;
+    margin-left: 37px;
+  }
+
+  .sound-analyse {
+    margin-left: 0;
+  }
+
+  .soundanalyse-txt {
+    float: left;
   }
 }
 
