--- a/src/less/main_xc.less
+++ b/src/less/main_xc.less
@@ -262,7 +262,6 @@
         padding: 5px 15px;
         border-radius: 15px;
         background-color: #0085e6;
-        border-radius: 15px;
         color: #fff;
         cursor: pointer;
 
@@ -732,6 +731,125 @@
         margin-right: 20px;
       }
     }
+
+    .readText-write {
+      color: #333;
+      font-size: 30px;
+      margin-top: 40px;
+
+      .readText-write-item {
+        display: inline-block;
+        margin-right: 10px;
+        padding-bottom: 5px;
+        border-bottom: 3px solid rgba(0, 133, 230, 1);
+      }
+
+      .h1 {
+        font-weight: 600;
+        display: inline-block;
+      }
+
+      .readText-write-btn {
+        width: 95px;
+        height: 36px;
+        background: #0085e6 url('../img/readText-reset.png') no-repeat 15px center;
+        background-size: 21px 17px;
+        color: #fff;
+        font-size: 16px;
+        border-radius: 18px;
+        display: inline-block;
+        line-height: 36px;
+        text-indent: 46px;
+        margin-left: 15px;
+        cursor: pointer;
+      }
+
+      input {
+        width: 66px;
+        height: 42px;
+        line-height: 42px;
+        font-size: 30px;
+        border: none;
+        background: none;
+        outline: none;
+        text-align: center;
+        margin: 0;
+        padding: 0;
+
+        &.active {
+          background-color: #d9efff;
+        }
+      }
+    }
+
+    .readText-example {
+      font-size: 0;
+      margin-top: 25px;
+
+      .readText-example-item {
+        font-size: 16px;
+        line-height: 22px;
+        color: #666;
+        width: 66px;
+        text-align: center;
+        background-color: rgba(250, 250, 251, 1);
+        border-radius: 13px;
+        display: inline-block;
+        margin-right: 10px;
+      }
+    }
+  }
+
+  .readText-blank {
+    font-weight: 200;
+
+    .readText-blank-item {
+      font-weight: 400;
+      font-size: 20px;
+      line-height: 30px;
+      color: rgba(102, 102, 102, 1);
+      vertical-align: top;
+
+      .sure {
+        color: #33cbb4;
+      }
+
+      .readText-blank-div {
+        display: inline-block;
+        padding-bottom: 2px;
+        border-bottom: 2px solid rgba(0, 133, 230, 1);
+        height: 26px;
+        position: relative;
+        width: 60px;
+        vertical-align: top;
+        color: #33cbb4;
+        text-align: center;
+
+        &.error {
+          color: #ff4548;
+        }
+
+        input {
+          width: 60px;
+          height: 20px;
+          line-height: 20px;
+          font-size: 20px;
+          border: none;
+          outline: none;
+          background: none;
+          text-align: center;
+          margin: 0;
+          padding: 0;
+          position: absolute;
+          bottom: 2px;
+          left: 0;
+
+          &.active {
+            background-color: #d9efff;
+          }
+        }
+      }
+    }
   }
 }
 
@@ -843,7 +961,7 @@
         width: 100%;
         color: #fff;
         display: block;
-        font-weight: 400;
+        font-weight: 600;
         font-size: 20px;
       }
 
